Habits section added

--- a/index.html
+++ b/index.html
@@ -41,6 +41,36 @@
                 <img src="images/Images 2.png" alt="">
             </div>
         </div>
+<!-- Change Your Habits section -->
+        <section class="habit-container">
+            <div class="text-content">
+                <h2 class="habits-heading">Change Your Habits</h2>
+                <p class="habits-paragraph">We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> <span class="span-certer">access to a gym</span></p>
+            </div>
+            <div class="image-content">
+                <div class="img-item">
+                    <img src="images/image 3.png" alt="">
+                    <h5>Movement</h5>
+                    <p>We believe fitness should be <br>accessible to everyone</p>
+                </div>
+                <div class="img-item">
+                    <img src="images/image 2.png" alt="">
+                    <h5>Movement</h5>
+                    <p>We believe fitness should be <br>accessible to everyone</p>
+                </div>
+                <div class="img-item">
+                    <img src="images/image 4.png" alt="">
+                    <h5>Movement</h5>
+                    <p>We believe fitness should be <br> accessible to everyone</p>
+                </div>
+                <div class="img-item">
+                    <img src="images/image 5.png" alt="">
+                    <h5>Movement</h5>
+                    <p>We believe fitness should be <br>accessible to everyone</p>
+                </div>
+            </div>
+    </section>
+
         
    
     </main>
