Run an extra mile Easily section added

--- a/index.html
+++ b/index.html
@@ -71,6 +71,19 @@
             </div>
     </section>
 
+<!-- Run an extra mile Easily section -->
+
+    <section class="mile-container">
+        <div class="mile-text-content">
+            <h2 class="mile-heading">Run an Extra <br> Mile Easily</h2>
+            <p class="mile-paragraph"> We believe fitness should be accessible to everyone, <br>everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+            <button class="join-btn">Join Now</button>
+        </div>
+        <div class="mile-image-content">
+            <img src="images/run.jpg" alt="">
+        </div>
+    </section>
+
         
    
     </main>
