Meet Our Team Section added

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
     </section>
 
-<!-- Run an extra mile Easily section -->
+<!-- Run an extra mile Easily section Starts -->
 
     <section class="mile-container">
         <div class="mile-text-content">
@@ -83,6 +83,69 @@
             <img src="images/run.jpg" alt="">
         </div>
     </section>
+
+
+<!-- Meet Our Team section Starts -->
+    <section class="team-container">
+        <div class="team-text-content">
+            <h2 class="team-heading">Meet Our Team</h2>
+                <p class="team-paragraph">We believe fitness should be accessible to everyone, everywhere, regardless of income or <br>access to a gym.</p>
+        </div>
+
+
+
+        <div class="row-1">
+            <div class="image-title">
+                <div class=><img src="images/trainer1.png" alt=""></div>
+                <div class="image-title-para">
+                    <h5>Jerome Bell</h5>
+                    <p>Tainer</p>
+                </div>
+            </div> 
+            <div class="image-title">
+                <div class=><img src="images/trainer1.png" alt=""></div>
+                <div class="image-title-para">
+                    <h5>Jerome Bell</h5>
+                    <p>Tainer</p>
+                </div>
+            </div>
+            <div class="image-title">
+                <div class=><img src="images/trainer1.png" alt=""></div>
+                <div class="image-title-para">
+                    <h5>Jerome Bell</h5>
+                    <p>Tainer</p>
+                </div>
+            </div>
+        </div>
+
+
+
+
+        <div class="row-2">
+            <div class="image-title">
+                <div class=><img src="images/trainer1.png" alt=""></div>
+                <div class="image-title-para">
+                    <h5>Jerome Bell</h5>
+                    <p>Tainer</p>
+                </div>
+            </div> 
+            <div class="image-title">
+                <div class=><img src="images/trainer1.png" alt=""></div>
+                <div class="image-title-para">
+                    <h5>Jerome Bell</h5>
+                    <p>Tainer</p>
+                </div>
+            </div>
+            <div class="image-title">
+                <div class=><img src="images/trainer1.png" alt=""></div>
+                <div class="image-title-para">
+                    <h5>Jerome Bell</h5>
+                    <p>Tainer</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
         
    
