Footer Section added

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 
 
 <!-- Meet Our Team section Starts -->
+
     <section class="team-container">
         <div class="team-text-content">
             <h2 class="team-heading">Meet Our Team</h2>
@@ -118,9 +119,6 @@
             </div>
         </div>
 
-
-
-
         <div class="row-2">
             <div class="image-title">
                 <div class=><img src="images/trainer1.png" alt=""></div>
@@ -147,10 +145,33 @@
     </section>
 
 
-        
-   
     </main>
-    <footer></footer>
-    
+    <footer class="footer-container">
+            <div class="footer-content">
+                <div class="footer-left-content">
+                    <h3 class="footer-left-heading">Fitness</h3>
+                    <p class="footer-left-paragraph"> We believe fitness should be accessible to everyone,<br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+                </div>
+                <div class="footer-right-content">
+                    <div class="footer-right-content-one">
+                        <h4>Get Started </h4>
+                        <p>Service</p>
+                        <p>Contact Us</p>
+                        <p>Affiliat Program</p>
+                        <p>About Us</p>
+                    </div>
+                    <div class="footer-right-content-two">
+                        <h4>Get Started </h4>
+                        <p>Fitness</p>
+                        <p>Platform</p>
+                        <p>Workout Libary</p>
+                        <p>App Design</p>
+                    </div>
+                </div>
+            </div>
+            <hr class="hr-style">
+                <h4 class="footer-end-heading">All right reserved @Fitness 2024</h4>
+        </footer>
+
 </body>
 </html>
