--- a/index.html
+++ b/index.html
@@ -84,6 +84,81 @@
         </div>
     </section>
 
+<!-- BMI Calculator Chart section Starts -->
+
+    <section class="bmi-container">
+        <div class="bmi-content">
+            <div class="bmi-left">
+                <h3>BMI Calculator Chart</h3>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>BMI</th>
+                            <th>Weight Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Below 18.5</td>
+                            <td>Underwaight</td>
+                        </tr>
+                        <tr>
+                            <td>18.5 - 24.9</td>
+                            <td>Healthy</td>
+                        </tr>
+                        <tr>
+                            <td>25.0 - 29.9</td>
+                            <td>Overweight</td>
+                        </tr>
+                        <tr>
+                            <td>30.0 - and Above</td>
+                            <td>Obese</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+
+            </div>
+            <div class="bmi-right">
+                <h3>Calculate your BMI</h3>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of <br> income or access to a gym.</p>
+                <form>
+                    <label for="height">
+                        <input  type="text" id="height" class="first-fill" placeholder="Height/cm">
+                    </label>
+                    <label for="weight">
+                        <input  type="text" id="weight" class="second-fill" placeholder="Weight/kg">
+                    </label> <br>
+                    <label for="age">
+                        <input  type="text" id="age" class="third-fill" placeholder="Age">
+                    </label>
+                    <label for="sex">
+                        <input  type="text" id="sex" class="four-fill" placeholder="Sex">
+                    </label>
+                    <br>
+                    <label for="factor">
+                        <input  type="text" id="factor" class="five-fill" placeholder="Select an activity factor">
+                    </label>
+                    <br>
+                    <button class="form-btn">Calculate</button>
+                </form>
+
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <!-- Meet Our Team section Starts -->
 
