some responsive design added

--- a/index.html
+++ b/index.html
@@ -84,6 +84,19 @@
         </div>
     </section>
 
+<!-- New Idea section Starts -->
+
+<section class="idea-container display">
+    <div class="idea-content">
+        <h4 class="idea-heading4">Explore</h4>
+        <p class="idea-paragraph">Benefits of running reference</p>
+    </div>
+
+
+
+</section>
+
+
 <!-- BMI Calculator Chart section Starts -->
 
     <section class="bmi-container">
