--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <div class="hamburger-menu"><i class="fa-solid fa-bars"></i></div>
             </nav>
      <!-- banner section -->
+
         <div class="banner-container">
             <div class="banner-content">
                 <h1 class="banner-heading">Get body in <br> <span class="heading-word-style second-font">shape</span> & stay <br>  healthy</h1>
@@ -34,13 +35,28 @@
                 <div class="btn">
                    <button class="btn-1">Join Club Now!</button>
                     <button class="btn-2">Download App</button>
-                </div>
-                
+                </div> 
             </div>
             <div class="banner-img">
                 <img src="images/Images 2.png" alt="">
+                <div class="free">
+                    <h2 class="free-heading">500+</h2>
+                    <p class="free-paragraph">Free Workout Videos</p>
+                </div>
+                <div class="vedio-tutorial">
+                    <div class="circle"></div>                          
+                    
+                    <div class="vedio-text-2">
+                        <h2 class="vedio-text-heading2">350+</h2>
+                        <p class="vedio-text-paragraph2">Vedio Tutorial</p>
+                    </div>
+                </div>
             </div>
         </div>
+
+
+
+
 <!-- Change Your Habits section -->
         <section class="habit-container">
             <div class="text-content">
