New Idea section added

--- a/index.html
+++ b/index.html
@@ -102,12 +102,23 @@
 
 <!-- New Idea section Starts -->
 
-<section class="idea-container display">
+<section class="idea-container">
     <div class="idea-content">
         <h4 class="idea-heading4">Explore</h4>
         <p class="idea-paragraph">Benefits of running reference</p>
     </div>
+    <div class="left-right-container">
+    <div class="idea-left-content">
+        <h2 class="free-member-heading">FREE MEMBERSHIP</h2>
+        <h4 class="free-acess-heading">Join now and get 15 days free access!</h4>
+        <p class="left-content-para">Alteration in some form, by injected <br> humour, or randomised words which don't <br>look even slightly believable.</p>
+        <button class="idea-btn">Call Now</button>
+    </div>
+    <div class="idea-right-content">
+        <img src="images/exercise2.png" alt="">
 
+    </div>
+</div>
 
 
 </section>
@@ -175,14 +186,6 @@
             </div>
         </div>
     </section>
-
-
-
-
-
-
-
-
 
 
 
