New Idea section added again

--- a/index.html
+++ b/index.html
@@ -100,28 +100,16 @@
         </div>
     </section>
 
-<!-- New Idea section Starts -->
-
+<!-- ----------------------------New Idea section Starts -------------------------->
 <section class="idea-container">
     <div class="idea-content">
-        <h4 class="idea-heading4">Explore</h4>
-        <p class="idea-paragraph">Benefits of running reference</p>
-    </div>
-    <div class="left-right-container">
-    <div class="idea-left-content">
-        <h2 class="free-member-heading">FREE MEMBERSHIP</h2>
-        <h4 class="free-acess-heading">Join now and get 15 days free access!</h4>
-        <p class="left-content-para">Alteration in some form, by injected <br> humour, or randomised words which don't <br>look even slightly believable.</p>
+        <p class="idea-paragraph">make your body fit</p>
+        <h2 class="idea-heading">let's exercise with us</h2>
         <button class="idea-btn">Call Now</button>
     </div>
-    <div class="idea-right-content">
-        <img src="images/exercise2.png" alt="">
-
-    </div>
-</div>
-
-
 </section>
+
+
 
 
 <!-- BMI Calculator Chart section Starts -->
