Some Correction added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <main>
-    <!-- navbar section -->
+    <!-------------- navbar section----------------------- -->
     
         <nav class="navbar">
             <div class="nav-logo"> 
@@ -26,7 +26,7 @@
             </div>
             <div class="hamburger-menu"><i class="fa-solid fa-bars"></i></div>
             </nav>
-     <!-- banner section -->
+     <!---------------- banner section ------------------------------->
 
         <div class="banner-container">
             <div class="banner-content">
@@ -57,7 +57,7 @@
 
 
 
-<!-- Change Your Habits section -->
+<!------------------- Change Your Habits section -------------------------->
         <section class="habit-container">
             <div class="text-content">
                 <h2 class="habits-heading">Change Your Habits</h2>
@@ -87,7 +87,7 @@
             </div>
     </section>
 
-<!-- Run an extra mile Easily section Starts -->
+<!-- -------------------Run an extra mile Easily section Starts ------------------>
 
     <section class="mile-container">
         <div class="mile-text-content">
@@ -112,7 +112,7 @@
 
 
 
-<!-- BMI Calculator Chart section Starts -->
+<!-- ---------------BMI Calculator Chart section Starts--------------- -->
 
     <section class="bmi-container">
         <div class="bmi-content">
@@ -176,20 +176,14 @@
     </section>
 
 
-
-
-
-
-<!-- Meet Our Team section Starts -->
+<!---------- Meet Our Team section Starts ------------------>
 
     <section class="team-container">
         <div class="team-text-content">
             <h2 class="team-heading">Meet Our Team</h2>
                 <p class="team-paragraph">We believe fitness should be accessible to everyone, everywhere, regardless of income or <br>access to a gym.</p>
         </div>
-
-
-
+        
         <div class="row-1">
             <div class="image-title">
                 <div class=><img src="images/trainer1.png" alt=""></div>
@@ -238,8 +232,6 @@
             </div>
         </div>
     </section>
-
-
     </main>
     <footer class="footer-container">
             <div class="footer-content">
