--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment Two</title>
-    <!-- Font Awesome cdn -->
+    <!------- Font Awesome cdn-------- -->
     <script src="https://kit.fontawesome.com/93da8d2d43.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="CSS/style.css">
@@ -25,7 +25,7 @@
                 <p>About</p>
             </div>
             <div class="hamburger-menu"><i class="fa-solid fa-bars"></i></div>
-            </nav>
+        </nav>
      <!---------------- banner section ------------------------------->
 
         <div class="banner-container">
@@ -183,7 +183,7 @@
             <h2 class="team-heading">Meet Our Team</h2>
                 <p class="team-paragraph">We believe fitness should be accessible to everyone, everywhere, regardless of income or <br>access to a gym.</p>
         </div>
-        
+
         <div class="row-1">
             <div class="image-title">
                 <div class=><img src="images/trainer1.png" alt=""></div>
@@ -233,6 +233,10 @@
         </div>
     </section>
     </main>
+
+
+<!---------- Footer section Starts ------------------>
+
     <footer class="footer-container">
             <div class="footer-content">
                 <div class="footer-left-content">
@@ -259,6 +263,5 @@
             <hr class="hr-style">
                 <h4 class="footer-end-heading">All right reserved @Fitness 2024</h4>
         </footer>
-
 </body>
 </html>
